--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 1
+        versionCode
         versionName "1.0"
         multiDexEnabled true
 
