--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         applicationId "com.udacity.gradle.builditbigger"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode
+        versionCode 1
         versionName "1.0"
         multiDexEnabled true
 
@@ -44,6 +44,10 @@ android {
             applicationIdSuffix ".paid"
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -51,10 +55,10 @@ dependencies {
     endpointsServer project(path: ':backend', configuration: 'endpoints')
 
     implementation project(':javaLibrary')
-    implementation project(':androidlibrary')
+    implementation project(':androidLibrary')
 
     implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.google.android.gms:play-services-ads:11.8.0'
+    freeImplementation 'com.google.android.gms:play-services-ads:11.8.0'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
